crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__option_response_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async findUser(id: string): Promise<User | undefined> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "GET",
    });
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User | undefined;
  },
};
