crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__patch_with_partial_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { UpdateUserBody, User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async updateUser(id: string, body: UpdateUserBody): Promise<User> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "PATCH",
      headers: { "Content-Type": "application/json" },
      body: JSON.stringify(body),
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User;
  },
};
