crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__post_with_body_omit_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface User {
  id: number;
  name: string;
  email: string;
}

export type CreateUserBody = {
  name: string;
  email: string;
};
