crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__query_required_param_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async searchUsers(opts: { term: string; page?: number }): Promise<User[]> {
    const params = new URLSearchParams();
    params.set("term", String(opts.term));
    if (opts.page !== undefined) params.set("page", String(opts.page));
    const query = params.toString();
    const response = await fetch(
      `${baseUrl}/api/users/search${query ? `?${query}` : ""}`,
      {
        method: "GET",
      },
    );
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User[];
  },
};
