crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__request_header_auto_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { CreateUserBody, User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async createUser(
    body: CreateUserBody,
    headers: { idempotencyKey: string },
  ): Promise<User> {
    const requestHeaders = new Headers();
    requestHeaders.set("Content-Type", "application/json");
    requestHeaders.set("Idempotency-Key", String(headers.idempotencyKey));
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "POST",
      headers: requestHeaders,
      body: JSON.stringify(body),
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User;
  },
};
