crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__request_header_auto_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { CreateUserBody, User } from "./types";

export interface Handlers {
  createUser(
    body: CreateUserBody,
    headers: { idempotencyKey: string },
  ): Promise<User>;
}
