crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__request_header_auto_server.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";
import type { CreateUserBody } from "./types";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.post("/api/users", async (req: Request, res: Response) => {
    try {
      const body = req.body as CreateUserBody;
      const headers = {
        idempotencyKey: req.header("Idempotency-Key") as string,
      };
      const result = await handlers.createUser(body, headers);
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
